[package]
name = "counterrs"
description = "a replacement for my old javascript based counter"
license = "GPLv3"
repository = "https://github.com/pastaya-net/counterrs"
version = "1.0.0-rc8" # how much more rcs??
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "Storage",
  "HtmlAudioElement",
  "HtmlImageElement",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.51"
wasm-bindgen = "0.2.101"
wasm-bindgen-test = "0.3.51"
